--- a/TODO
+++ b/TODO
@@ -54,6 +54,7 @@ DONE - "dump" command supports directories
 DONE - "iplist" command needs to support directories of pcap files
 - Rewrite pcapparser to use Ruby's builtin BinData so it's easier to extend
 - Expand ~ for modload command
+- Make nsm-console "installable" to a different directory, rather than running it out of the distribution dir.
 
 
 IDEAS:
