fixed a serious issue in iplist caused by uninitialized array. This caused the command to look like it was unrecognized, however it was due to gen_list_from_pcap failing

--- a/TODO
+++ b/TODO
@@ -55,6 +55,7 @@ DONE - "iplist" command needs to support directories of pcap files
 - Rewrite pcapparser to use Ruby's builtin BinData so it's easier to extend
 DONE - Expand ~ for modload command
 - Make nsm-console "installable" to a different directory, rather than running it out of the distribution dir.
+DONE - Fixed error in iplist where the ips were not listed due to uninitialized array.
 
 
 IDEAS:
