--- a/TODO
+++ b/TODO
@@ -56,6 +56,7 @@ DONE - "iplist" command needs to support directories of pcap files
 DONE - Expand ~ for modload command
 - Make nsm-console "installable" to a different directory, rather than running it out of the distribution dir.
 DONE - Fixed error in iplist where the ips were not listed due to uninitialized array.
+- A copy of the run log (PLUS OUTPUT) should go in ${OUTPUT_DIR}. Use IO.popen to grab output
 
 
 IDEAS:
